Fix whitespace in code output

--- a/frontend/main.scss
+++ b/frontend/main.scss
@@ -145,6 +145,7 @@ a:hover {
 
 .line {
   padding-left: 10px;
+  white-space: pre;
 }
 
 .result-code {
